--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "embla-carousel-react": "^8.0.0-rc14",
     "google-fonts": "^1.0.0",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-multi-carousel": "^2.8.4",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "smooth-scroll": "^16.1.3"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/slick-carousel": "^1.6.39",
     "@types/smooth-scroll": "^16.1.2",
     "autoprefixer": "^10",
     "eslint": "^8",
