--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.3",
+    "@nextui-org/system": "^2.0.12",
+    "@nextui-org/theme": "^2.1.12",
     "embla-carousel-react": "^8.0.0-rc14",
+    "framer-motion": "^10.16.4",
     "google-fonts": "^1.0.0",
     "next": "13.5.4",
     "react": "^18",
